--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     cursor: pointer;
+    transition: transform 200ms ease;
 }
 
 .btn_home:hover {
@@ -166,12 +167,24 @@ body {
 
 /*  sección Pokedex.jsx */
 
+.pokedex{
+    background-color: rgb(228, 228, 228);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
 .cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    align-content: center;
     gap: 60px 20px;
     padding-bottom: 100px;
+    max-width: 1300px;
   }
 .header_a {
     width: 100%;
@@ -200,10 +213,13 @@ body {
 }
 
 .pokedex_p {
-    font-size: 20px;
+    font-size: 18px;
     color: black;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
+    margin-top:15px;
+    margin-bottom: 15px;
+    margin-left: 30px;
 }
 
 .pokedex_strong {
