--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-content: center;
     flex-wrap: wrap;
     /* background-color: rgb(241, 241, 241); */
 }
@@ -25,11 +26,12 @@ body {
     font-size: 40px;
     margin-top: 20px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .home_p {
     font-size: 20px;
-    color: black;
+    /* color: black; */
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     margin-top: 0;
@@ -41,7 +43,7 @@ body {
     box-shadow: 10px;
     background-color: rgb(255, 255, 255);
     font-family: 'Times New Roman', Times, serif;
-    box-shadow: 5px 10px 20px 0px rgba(218, 203, 203, 0.9);
+    box-shadow: 0px 10px 15px 0px rgba(175, 171, 171, 0.9);
     outline: none;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -53,6 +55,7 @@ body {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
     background-color: rgb(207, 15, 15);
+    box-shadow: 0px 10px 15px 0px rgba(218, 150, 150, 0.9);
     color: rgb(255, 255, 255);
     border: 0;
     outline: 0;
