--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@
 
 /*  sección btn-footer  pokedex */
 
-.btn-footer-a{
+.btn-footer-a {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
     cursor: url(/src/img/dirección.png), auto;
@@ -105,7 +105,7 @@
 
 }
 
-.btn-footer-b{
+.btn-footer-b {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
     cursor: url(/src/img/dirección.png), auto;
@@ -129,15 +129,15 @@
 
 }
 
-.footer--footer{
+.footer--footer {
     display: flex;
     flex-direction: row;
 }
 
-.footer-p{
+.footer-p {
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
-    font-weight:bold;
+    font-weight: bold;
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
@@ -146,7 +146,7 @@
     padding-right: 20px;
     padding-top: 10px;
     color: rgb(54, 54, 54);
-   
+
 }
 
 /*  switch */
@@ -156,15 +156,15 @@
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
-  
-  .switch input { 
+}
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-  .slider {
+}
+
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -174,9 +174,9 @@
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -186,44 +186,280 @@
     background-color: rgb(155, 155, 155);
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  input:checked + .slider {
+}
+
+input:checked+.slider {
     background-color: #438cbd;
-  }
-  
-  
-  input:checked + .slider:before {
+}
+
+
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
+}
 
-  /* Rounded sliders */
+/* Rounded sliders */
 .slider.round {
     border-radius: 34px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
- /* btn-dark mode */
-.bxs-sun{
+}
+
+/* btn-dark mode */
+.bxs-sun {
     font-size: 20px;
     margin-top: 6px;
     margin-left: 6px;
     color: rgb(244, 247, 181);
 }
-.bxs-moon{
+
+.bxs-moon {
     font-size: 20px;
     margin-left: 10px;
 
 }
 
 
-.switch_header{
+.switch_header {
     position: fixed;
-    left: 1280px;
-    top:10px;  
+    left: 1100px;
+    top: 10px;
 
+}
+
+/* PokemonDetails.jsx */
+
+.pokemon_details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    background-color: rgb(116, 134, 134);
+    flex-wrap: wrap;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.article_card {
+    
+    width: 800px;
+    height: 800px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0 1px 7px #0003;
+    transition: transform 200ms ease;
+    margin-top: 60px;
+    text-align: center;
+    display: flex;
+    align-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+
+.article_img {
+    width: 170px;
+    /* position: absolute; */
+    left: 580px; 
+    top: -80px;
+    transform: translateY(-55px)
+}
+
+.article_div {
+    position: absolute;
+    height: 150px;
+    width: 800px;
+}
+.article_name{
+    margin: 0;
+    text-transform: capitalize;
+    margin-right: 280px;
+    margin-left: 280px;
+    width: 220px;
+    margin-top: 10px;
+    display: inline-block;
+    position: relative;  
+    word-wrap: break-word;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    
+}
+.article_name::after{
+    content: "";
+    position: absolute;
+    width: 220px;
+    height: 2px;
+    background-color: rgb(207, 207, 207);
+    top:0.7em;
+    left: 230px;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+
+.article_name::before{
+    content: "";
+    position: absolute;
+    width: 220px;
+    height: 2px;
+    left: -230px;
+    background-color: rgb(207, 207, 207);
+    top:0.7em;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+.article_id{
+
+    margin-bottom: 0;
+    margin-top: 0px;
+    font-family: 'Times New Roman', Times, serif;
+    border: 1px solid;
+    text-align: center;
+    
+    
+    
+}
+
+.weight_and_height{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+.card_h2_weight{
+    font-size: 15px;
+    margin-right: 15px;
+    color: rgb(26, 26, 26);
+}
+.card_h2_height{
+    font-size: 15px;
+    margin-left: 15px;
+    color: rgb(26, 26, 26);
+}
+
+.weight{
+    font-size: 18px;
+    color: rgb(48, 48, 48);
+}
+
+.height{
+    font-size: 18px;
+    color: rgb(48, 48, 48);
+}
+
+.article_abilities{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.abiliti_a{
+    font-size: 15px;
+    text-transform: capitalize;
+    border: 1px solid rgb(143, 143, 143);
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: rgb(48, 48, 48);
+    margin-right: 5px;
+}
+.abiliti_b{
+    font-size: 15px;
+    text-transform: capitalize;
+    border: 1px solid rgb(143, 143, 143);
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: rgb(48, 48, 48);
+    margin-left: 5px;
+
+}
+
+.article_abilities_total{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    /* max-width: 200px;
+    position: relative; */
+ 
+}
+.article_skill{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-transform: capitalize;
+    color: rgb(26, 26, 26);
+    font-size: 20px;
+}
+
+.type_a{
+    font-size: 15px;
+    text-transform: capitalize;
+    border: 1px solid rgb(143, 143, 143);
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: rgb(255, 255, 255);
+    width: 100px;
+    text-align: center;
+    /* margin-right: 380px;
+    margin-left: 380px; */
+}
+
+.article_types_title{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-transform: capitalize;
+    color: rgb(26, 26, 26);
+    font-size: 20px;
+}
+.article_types_total{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+.article_types_and_skill{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
+}
+
+.article_stats{
+    font-size: 25px;
+    font-weight:bolder;
+    width: 100px;
+    margin-top: 20px;
+    color: rgb(31, 31, 31);
+}
+
+.article_stats::after{
+    content: "";
+    position: absolute;
+    width: 555px;
+    height: 1px;
+    background-color: rgb(209, 209, 209);
+    top: 472px;
+    left: 90px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.pokebola_fondo{
+    width: 70px;
+    filter: opacity(10%);
+    position: absolute;
+    left: 650px;
+    top: 435px;
 }
